# persona_vectors

./: .gitignore  README.md  debug_merge.py  pyproject.toml  requirements.txt  run_all_in_one.pbs  run_all_models.pbs  run_alpha_sweep.sh  run_other_alpha_sweep.sh  run_other_models.pbs  run_other_repetition.pbs  test.txt
.github/scripts/: sync_to_notion.py
.github/workflows/: weekly_notion_sync.yml
_backup_before_clone/: requirements.txt
_backup_before_clone/scripts/: 00_prepare_vectors.py  02_compare_vector_norms.py  02_probe_slopes_from_logs.py  (+6 more)
jobs/: run_all_in_one.pbs  run_all_models.pbs  run_alpha_sweep.sh  run_layer_sweep.pbs  run_layer_sweep.sh  run_neutral_experiments.sh  run_other_alpha_sweep.pbs  run_other_alpha_sweep.sh  run_other_models.pbs  run_other_repetition.pbs
scripts/: 00_old_prepare_vectors.py  00_prepare_vectors.py  01_run_probe.py  01_run_probe_with_rms.py  02_collapse_from_logs.py  02_compare_vector_norms.py  03_plot_results.py  05_repetition_vs_alpha.py  06_alpha_eval_v13.py  07_alpha_visualize.py  08_corr_range_vs_rms_v8.py  09_visualize_summaries.py  11_build_prompt_alpha_table.py  12_join_boundaries_and_label.py  13_text_change_vs_alpha.py  13_text_metrics_vs_alpha.py  14_calc_personality_score.py  15_text_sensitivity_visualize.py  16_visualize_combined_metrics.py  17_cross_model_comparison.py  18_visualize_scatter.py  19_visualize_alignment_radar.py  20_visualize_tradeoff_scatter.py  21_thesis_analysis_plots.py  99_rerun_analysis.py  check_tree.py  live_axes_and_hook.py  util_create_neutral_prompts.py  util_extract_prompts.py
(+4 files in other folders)
